--- a/styles/table.css
+++ b/styles/table.css
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   align-items: center;
-  z-index: 2;
+  z-index: 3;
 
   box-sizing: border-box;
   background-color: var(--background-color);
@@ -23,13 +23,13 @@
   position: fixed;
   top: calc(-1 * var(--scroll-buffer));
   left: calc(-1 * var(--scroll-buffer));
-  z-index: 10;
+  z-index: 2;
   background-color: var(--background-color);
 }
 
 .scroll-mask-top {
   right: calc(-1 * var(--scroll-buffer));
-  height: var(--scroll-buffer);
+  height: calc(var(--scroll-buffer) + var(--nav-bar-height));
 }
 
 .scroll-mask-left {
